EKS_Using_Terraform/rt.tf

# public route table creation

resource "aws_route_table" "public_route_table" {

    vpc_id = aws_vpc.vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.internet_gateway.id
    }

    tags = {
        Name = "public_route_table_${var.env}"
        Environment = var.env
    }

}

resource "aws_route_table_association" "public_route_table_association_1a" {

    subnet_id = aws_subnet.public_subnet_1a.id
    route_table_id = aws_route_table.public_route_table.id

}

resource "aws_route_table_association" "public_route_table_association_1b" {

    subnet_id = aws_subnet.public_subnet_1b.id
    route_table_id = aws_route_table.public_route_table.id

}

# private route table creation


resource "aws_route_table" "private_route_table_1a" {

    vpc_id = aws_vpc.vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat_gateway_1a.id
    }

    tags = {
        Name = "private_route_table_1a_${var.env}"
        Environment = var.env
    }

}

resource "aws_route_table" "private_route_table_1b" {

    vpc_id = aws_vpc.vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat_gateway_1b.id
    }

    tags = {
        Name = "private_route_table_1b_${var.env}"
        Environment = var.env
    }

}

resource "aws_route_table_association" "private_route_table_association_1a" {

    subnet_id = aws_subnet.private_subnet_1a.id
    route_table_id = aws_route_table.private_route_table_1a.id

}

resource "aws_route_table_association" "private_route_table_association_1b" {

    subnet_id = aws_subnet.private_subnet_1b.id
    route_table_id = aws_route_table.private_route_table_1b.id

}
